Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-487

current subfolder visualization solution doesn't work correctly with project includes (*.pri)

XMLWordPrintable

      with creator 1.3 there came some sub-folder visualization into the project view ... I was really missing something like that (and it is one reason why I don't wanted to use creator in my big-every-day project)
      ... but the bad thing on the current solution is that it doesn't work nice with project-includes:

      • stacked *.pri-files (so a *.pri which again include(...) another *.pri) is displayed flat ... also *.pri are displayed as direct childs of the *.pro file
      • the filesystem position of a pri file is not visible (in my big-pro there are some *.pri grouped by an filesystem folder ... if the other issue would be fixed, I could add another layer of *.pri to work around this)
      • I'm also not so happy about the position of header/source/... split, but atm I've no better idea
        (... maybe I would suggest that it is possible to disable different parts of the tree-visualisation, atm it's simple-tree or all-sub-parts-which-are-implemented)

      ... attachment: I tried to reproduce some of the ugly cases, which I saw when loading my big-project

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            s.langer Stefan Langer
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes